src/kube/jenkins/jenkins-namespace.yml
---
kind: "Namespace"
apiVersion: "v1"
metadata:
  name: "jenkins"
  labels:
    name: "jenkins"
