src/kube/jenkins/jenkins-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins  # Sets Deployment name
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
        - name: jenkins
          image: jenkins/jenkins:lts-jdk17
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 8080  # Exposes container port
          volumeMounts:
            - name: jenkins-home
              mountPath: var/jenkins_home
          resources:
            requests:
              cpu: "1"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "2048Mi"
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-pvc
      nodeSelector:
        kubernetes.io/os: linux
