src/kube/jenkins/jenkins-ingress.yml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/add-base-url: "true"
  name: "jenkins-ingress"
  namespace: "jenkins"
spec:
  ingressClassName: "nginx"
  rules:
    - host: "jenkins.kube"
      http:
        paths:
          - pathType: "Prefix"
            path: "/"
            backend:
              service:
                name: "jenkins"
                port:
                  number: 8080
